fix: align

--- a/src/sass/components/_site-header.scss
+++ b/src/sass/components/_site-header.scss
@@ -3,6 +3,10 @@
   justify-content: space-between;
   align-items: center;
   height: 60px;
+
+  div {
+    align-items: center;
+  }
 }
 
 .site-header__logo {
@@ -26,4 +30,15 @@
 
 .site-header__logo {
   width: 84px;
+}
+
+@include desktop-media {
+  .site-header {
+    height: 100px;
+  }
+
+  .site-header__logo {
+    width: 129px;
+    height: 23px;
+  }
 }
